[metadata]
name = uvisualisation-sotonhpa
version = 0.0.1
author = Southampton University Human Powered Aircraft Society
author_email = sotonhpa@gmail.com
description = A package for investigating uncertainty propagation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SUHPA-Software/uncertainty-tools
project_urls =
    Bug Tracker = https://github.com/SUHPA-Software/uncertainty-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
